--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     
 
     <!-- HERO SECTION -->
-    <section class="hero-container">
+    <section class="hero-section">
+        <div class="hero-container">
         <div class="hero-content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button>Sign up</button>
+            <h1 class="hero-main-text">This website is awesome</h1>
+            <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="signup-button">Sign up</button>
         </div>
-        <div class="hero-image"></div>
+        <div class="hero-image">Placeholder image</div>
+        </div>
     </section>
 
     <!-- SECTION 2 -->
