--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
             </div>
         </header>
         <main class="hero-section">
-            <div class="section-container"></div>
+            <div class="section-container">
+                <div class="hero-content">
+                    <h1 class="hero-main-text">This website is awesome</h1>
+                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="signup-button">Sign up</button>
+                </div>
+                <img class="hero-image">
+            </div>
         </main>
         <section class="category-section">
             <div class="section-container"></div>
