Finish hero section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
             <div class="section-container">
                 <div class="hero-content">
                     <h1 class="hero-main-text">This website is awesome</h1>
-                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <p class="hero-secondary-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores aperiam repudiandae similique ipsa voluptatum numquam architecto ducimus, quisquam excepturi autem possimus eius? Saepe sunt repellat consequatur recusandae praesentium tempore eum.</p>
                     <button class="signup-button">Sign up</button>
                 </div>
+                <div class="hero-content">
                 <img class="hero-image">
+                </div>
+                
             </div>
         </main>
         <section class="category-section">
