Finish category section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- HEADER -->
         <header class="header">
             <div class="section-container header-container">
                 <div class="header-logo">Header Logo</div>
@@ -22,6 +23,8 @@
                 </nav>
             </div>
         </header>
+
+        <!-- HERO SECTION -->
         <main class="hero-section">
             <div class="section-container">
                 <div class="hero-content">
@@ -35,8 +38,30 @@
                 
             </div>
         </main>
+
+        <!-- CATEGORY SECTION -->
         <section class="category-section">
-            <div class="section-container"></div>
+            <div class="section-container category-container">
+                <h2 class="category-section-title">Some random information.</h2>
+                <div class="categories">
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique quasi eum laboriosam deserunt quibusdam atque enim a, sapiente optio.</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique quasi eum laboriosam deserunt quibusdam atque enim a, sapiente optio.</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique quasi eum laboriosam deserunt quibusdam atque enim a, sapiente optio.</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image"></div>
+                        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique quasi eum laboriosam deserunt quibusdam atque enim a, sapiente optio.</div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="quote-section">
             <div class="section-container"></div>
