Finish quote section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@
                 </div>
             </div>
         </section>
+
+        <!-- QUOTE SECTION -->
         <section class="quote-section">
-            <div class="section-container"></div>
+            <div class="section-container quote-container">
+                <div class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis fugiat, nemo debitis beatae molestias, ratione praesentium, aliquid quas cumque dolores odit iusto. Soluta harum porro aliquid suscipit velit aut maiores.</div>
+                <div class="author">- Some dude</div>
+            </div>
         </section>
+
+        <!-- ACTION SECTION -->
         <section class="action-section">
             <div class="section-container"></div>
         </section>
