Finish action section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
 
         <!-- ACTION SECTION -->
         <section class="action-section">
-            <div class="section-container"></div>
+            <div class="section-container action-container">
+                <div class="action-banner">
+                    <div class="action-banner-text">
+                        <h4>Call to action! It's time!</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, fugiat.</p>
+                    </div>
+                    <button class="signup-button action-banner-button">Sign up</button>
+                </div>
+            </div>
         </section>
         <footer class="footer">
             <div class="section-container"></div>
