--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
                 </div>
             </div>
         </section>
+
+        <!-- FOOTER -->
         <footer class="footer">
-            <div class="section-container"></div>
+            <div class="section-container footer-container">
+                Copyright &copy; The Odin Project 2021
+            </div>
         </footer>
 
     </body>
